--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,6 @@ body {
 
 .header {
   color: white;
-  margin-top: 10px;
   background: var(--gradient-grey);
   padding: 20px;
   position: relative;
@@ -406,16 +405,6 @@ select{
   margin-bottom: 10px;
 }
 
-.backendItem{
-  font-size: 14px;
-  display: inline-block;
-  float: left;
-  text-align: left;
-  margin-top: 10px;
-  clear: left;
-  width: 200px;
-}
-
 .mainOptions{
   font-size: 14px;
   text-align: left;
@@ -463,4 +452,71 @@ input[type="checkbox"].backendCheckbox:after{
 
 input[type="checkbox"].backendCheckbox:checked:after{
   left: calc(100% - 1.5em);
+}
+
+.radio-inputs {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 0.5rem;
+  background-color: #EEE;
+  box-sizing: border-box;
+  box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
+  padding: 0.25rem;
+  margin-bottom: 10px;
+  width: 300px;
+  font-size: 14px;
+}
+
+.radio-inputs .radio {
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+.radio-inputs .radio input {
+  display: none;
+}
+
+.radio-inputs .radio .name {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  border: none;
+  padding: .5rem 0;
+  color: rgba(51, 65, 85, 1);
+  transition: all .15s ease-in-out;
+}
+
+.radio-inputs .radio input:checked + .name {
+  background-color: #fff;
+  font-weight: 600;
+}
+ul{
+  padding: 0;
+}
+.responsive-table {
+
+
+  li {
+    border-radius: 3px;
+    padding: 7px 30px;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .table-row {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  }
+
+  .col-1 {
+    flex-basis: 30%;
+  }
+
+  .col-2 {
+    flex-basis: 10%;
+  }
 }
